--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -26,3 +26,9 @@ ion-menu-button {
 #container a {
   text-decoration: none;
 }
+
+.logo {
+  width: 100px;
+  align-items: center;
+  text-align: right;
+}
