--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,7 +84,7 @@
    */
 
   body {
-    --ion-color-primary: #fff;
+    --ion-color-primary: #000;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
@@ -157,7 +157,7 @@
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #000;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-color-step-50: #0d0d0d;
@@ -201,7 +201,7 @@
     --ion-background-color: #fff;
     --ion-background-color-rgb: 18,18,18;
 
-    --ion-text-color: #fff;
+    --ion-text-color: rgb(37,70,53);
     --ion-text2-color: #000;
     --ion-text-color-rgb: 255,255,255;
 
@@ -227,11 +227,11 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: rgb(37, 70, 53);
+    --ion-item-background: #fff;
 
-    --ion-toolbar-background: rgb(37, 70, 53);
+    --ion-toolbar-background: #fff;
 
-    --ion-tab-bar-background: #1f1f1f;
+    --ion-tab-bar-background: #fff;
 
     --ion-card-background: #fff;
   }
