--- a/src/app/folder/login/login.page.html
+++ b/src/app/folder/login/login.page.html
@@ -17,8 +17,8 @@
 
     <ion-card-content>
       <div class="signin-btns">
-        <ion-button fill="solid" shape="round" class="loginbtn" [routerLink]="['../../loginscreen/loginscreen']">Login</ion-button>
-        <ion-button fill="outline" shape="round" color="light" [routerLink]="['../../signup/signup']">Signup</ion-button>
+        <ion-button fill="solid" shape="round" class="loginbtn" [routerLink]="['/login']">Login</ion-button>
+        <ion-button fill="outline" shape="round" color="light" [routerLink]="['/signup']">Signup</ion-button>
       </div>
 
       <div class="text-tag">
