--- a/src/app/folder/loginscreen/loginscreen.page.html
+++ b/src/app/folder/loginscreen/loginscreen.page.html
@@ -61,6 +61,6 @@
     </ion-card-content>
   </ion-card>
   <div class="ion-card-footer">
-    <span>Don't have an account?</span><button [routerLink]="['../../signup/signup']" class="ion-no-padding">Sign Up</button>
+    <span>Don't have an account?</span><button [routerLink]="['/signup']" class="ion-no-padding">Sign Up</button>
   </div>
 </ion-content>
