--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -229,7 +229,9 @@
 
     --ion-item-background: #fff;
 
-    --ion-toolbar-background: #fff;
+    --ion-toolbar-background: rgb(37,70,53);
+
+    --ion-toolbar-color: #fff;
 
     --ion-tab-bar-background: #fff;
 
