--- a/src/app/folder/athleteprofile/athleteprofile.page.html
+++ b/src/app/folder/athleteprofile/athleteprofile.page.html
@@ -1,12 +1,16 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>athleteprofile</ion-title>
+  <ion-toolbar id="main-content">
+    <ion-buttons slot="start">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Athlete Profile</ion-title>
+    <ion-buttons slot="end">
+      <ion-button size="large" icon-only>
+       <!-- <ion-icon name="settings"></ion-icon> -->
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-menu-button></ion-menu-button>
-  </ion-buttons>
 </ion-header>
-
-<ion-content>
-hii
+<ion-content fullscreen="true">
+  <ion-button class="logoutBtn" (click)='logout()' fill="clear">Log Out</ion-button>
 </ion-content>
