--- a/src/app/folder/attemptselections/attemptselections.page.html
+++ b/src/app/folder/attemptselections/attemptselections.page.html
@@ -1,6 +1,14 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>attemptselections</ion-title>
+  <ion-toolbar id="main-content">
+    <ion-buttons slot="start">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Attempts</ion-title>
+    <ion-buttons slot="end">
+      <ion-button size="large" icon-only>
+       <!-- <ion-icon name="settings"></ion-icon> -->
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
