--- a/src/app/folder/bodyweightlog/bodyweightlog.page.html
+++ b/src/app/folder/bodyweightlog/bodyweightlog.page.html
@@ -1,9 +1,17 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>bodyweightlog</ion-title>
+  <ion-toolbar id="main-content">
+    <ion-buttons slot="start">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Bodyweight Log</ion-title>
+    <ion-buttons slot="end">
+      <ion-button size="large" icon-only>
+       <!-- <ion-icon name="settings"></ion-icon> -->
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-bodyweight log 
+
 </ion-content>
