--- a/src/app/folder/checkin/checkin.page.html
+++ b/src/app/folder/checkin/checkin.page.html
@@ -1,6 +1,14 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>checkin</ion-title>
+  <ion-toolbar id="main-content">
+    <ion-buttons slot="start">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Check In</ion-title>
+    <ion-buttons slot="end">
+      <ion-button size="large" icon-only>
+       <!-- <ion-icon name="settings"></ion-icon> -->
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
