--- a/src/app/folder/programming/programming.page.html
+++ b/src/app/folder/programming/programming.page.html
@@ -1,9 +1,29 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>programming</ion-title>
+  <ion-toolbar id="main-content">
+    <ion-buttons slot="start">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Programming</ion-title>
+    <ion-buttons slot="end">
+      <ion-button size="large" icon-only>
+       <!-- <ion-icon name="settings"></ion-icon> -->
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-tabs>
+  <ion-tab-bar slot="bottom, top">
+    <ion-tab-button tab="day">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Day</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="week">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>Week</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="cycle">
+      <ion-icon name="moon"></ion-icon>
+      <ion-label>Cycle</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
