--- a/src/app/folder/signup/signup.page.html
+++ b/src/app/folder/signup/signup.page.html
@@ -1,3 +1,4 @@
+
 <ion-header>
   <ion-buttons slot="start">
     <ion-back-button defaulthref="login" text=""></ion-back-button>
@@ -8,49 +9,83 @@
   <ion-card class="ion-no-margin">
     <ion-img src="assets/images/logo.png"></ion-img>
     <ion-card-content>
-      <div class="wrapform">
-        <ion-item>
-          <ion-input type="text" name="name" [(ngModel)]="name" placeholder="full name" required>
-            <ion-icon name="person"></ion-icon>
-          </ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input type="text" name="email" [(ngModel)]="email" placeholder="email" required>
-            <ion-icon name="mail"></ion-icon>
-          </ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input type="password" name="password" placeholder="password" required>
-            <ion-icon name="lock-closed"></ion-icon>
-          </ion-input>
-          </ion-item>
+      <form [formGroup]="validationFormUser" (ngSubmit)="RegisterUser(validationFormUser.value)">
+        <div class="wrapform">
           <ion-item>
-          <ion-input type="password" name="password2" placeholder="confirm password" required>
-            <ion-icon name="lock-closed"></ion-icon>
-          </ion-input>
-        </ion-item>
-      </div>
-      <div class="sign-btn-wrap">
-        <ion-button fill="solid" shape="round" class="sign-btn">Sign up</ion-button>
-      </div>
+            <ion-input type="text" name="name" formControlName="name" placeholder="full name" required>
+              <ion-icon name="person"></ion-icon>
+            </ion-input>
+          </ion-item>
+          <div>
+            <ng-container *ngFor="let validation of validationUserMessage.name">
+              <div class="error_message"
+                *ngIf="validationFormUser.get('name').hasError(validation.type) && (validationFormUser.get('name').dirty || validationFormUser.get('name').touched)">
+                {{validation.message}}
+              </div>
+            </ng-container>
+          </div>
+          <ion-item>
+            <ion-input type="text" name="email" formControlName="email" placeholder="email" required>
+              <ion-icon name="mail"></ion-icon>
+            </ion-input>
+          </ion-item>
+          <div>
+            <ng-container *ngFor="let validation of validationUserMessage.email">
+              <div class="error_message"
+                *ngIf="validationFormUser.get('email').hasError(validation.type) && (validationFormUser.get('email').dirty || validationFormUser.get('email').touched)">
+                {{validation.message}}
+              </div>
+            </ng-container>
+          </div>
+          <ion-item>
+            <ion-input type="password" name="password" placeholder="password" formControlName="password" required>
+              <ion-icon name="lock-closed"></ion-icon>
+            </ion-input>
+          </ion-item>
+          <div>
+            <ng-container *ngFor="let validation of validationUserMessage.password">
+              <div class="error_message"
+                *ngIf="validationFormUser.get('password').hasError(validation.type) && (validationFormUser.get('password').dirty || validationFormUser.get('password').touched)">
+                {{validation.message}}
+              </div>
+            </ng-container>
+          </div>
+          <ion-item>
+            <ion-input type="password" name="password2" placeholder="confirm password" formControlName="password2"
+              required>
+              <ion-icon name="lock-closed"></ion-icon>
+            </ion-input>
+          </ion-item>
+          <div>
+            <ng-container *ngFor="let validation of validationUserMessage.password2">
+              <div class="error_message"
+                *ngIf="validationFormUser.get('password2').hasError(validation.type) && (validationFormUser.get('password2').dirty || validationFormUser.get('password2').touched)">
+                {{validation.message}}
+              </div>
+            </ng-container>
+          </div>
+        </div>
+        <div class="sign-btn-wrap">
+          <ion-button type="submit" fill="solid" shape="round" class="sign-btn" [disabled]="!validationFormUser.valid">
+            Sign up</ion-button>
+        </div>
 
-      <div class="text-tag">
-        <span>Sign up via Social Media</span>
-      </div>
+        <div class="text-tag">
+          <span>Sign up via Social Media</span>
+        </div>
 
-      <div class="social-btns">
-        <ion-button style="background-image:url('assets/images/facebook.png'); background-size:cover" fill="clear"
-          class="facebookbtn"></ion-button>
-        <ion-button style="background-image:url('assets/images/google.png'); background-size:cover" fill="clear"
-          class="googlebtn"></ion-button>
-        <ion-button style="background-image:url('assets/images/apple.png'); background-size:cover" fill="clear"
-          class="applebtn"></ion-button>
-      </div>
+        <div class="social-btns">
+          <ion-button style="background-image:url('assets/images/facebook.png'); background-size:cover" fill="clear"
+            class="facebookbtn"></ion-button>
+          <ion-button style="background-image:url('assets/images/google.png'); background-size:cover" fill="clear"
+            class="googlebtn"></ion-button>
+          <ion-button style="background-image:url('assets/images/apple.png'); background-size:cover" fill="clear"
+            class="applebtn"></ion-button>
+        </div>
+      </form>
     </ion-card-content>
-
   </ion-card>
-
   <div class="ion-card-footer">
-    <span>Already have an account?</span><button [routerLink]="['../../loginscreen/loginscreen']" class="ion-no-padding">Login</button>
+    <span>Already have an account?</span><button [routerLink]="['/login']" class="ion-no-padding">Login</button>
   </div>
 </ion-content>
