--- a/src/app/folder/signup/signup.page.scss
+++ b/src/app/folder/signup/signup.page.scss
@@ -119,3 +119,10 @@ ion-icon {
         color: green;
     }
 }
+
+.error_message {
+    font-size: 8px;
+    font-weight: 200;
+    color: red;
+}
+
