--- a/src/app/folder/traininganalysis/traininganalysis.page.html
+++ b/src/app/folder/traininganalysis/traininganalysis.page.html
@@ -11,7 +11,19 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-tabs>
+  <ion-tab-bar slot="bottom, top">
+    <ion-tab-button tab="squat">
+      <ion-icon src="assets/icon/squat.svg"></ion-icon>
+      <ion-label></ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="bench">
+      <ion-icon src="assets/icon/bench.svg"></ion-icon>
+      <ion-label></ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="deadlift">
+      <ion-icon src="assets/icon/deadlift.svg"></ion-icon>
+      <ion-label></ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
